# tickout

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements-dev.txt  requirements.txt
cmb_transactions/: __init__.py  __main__.py  exceptions.py  models.py  parser.py
discoverers/: imap.py
etc/: config.sample.yaml  config.yaml
imap_listener/: dispatcher.py  imap.py
imap_listener/parsers/: cmb_transaction.py
server/: ipc.py
src/: config.cpp  config.h  stdafx.h  tickout.cpp  tickout.h  ticktick.h
tickout/: __main__.py  app.py  exceptions.py  log.py  settings.py
